bamf (0.5.3~bzr0+16.04.20160523-0ubuntu2) UNRELEASED; urgency=medium

  * BamfMatcher: allow overriding desktop with the environment var
    BAMF_DESKTOP_FILE_HINT

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Wed, 29 Jun 2016 17:57:07 +0200

bamf (0.5.3~bzr0+16.04.20160523-0ubuntu1) xenial; urgency=medium

  * bamfdaemon-dbus-runner: don't try to start again if already running
    (LP: #1581896, #1532226)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Mon, 23 May 2016 18:05:13 +0000

bamf (0.5.3~bzr0+16.04.20160415-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * BamfWindow: Export window actions menu using dbusmenu (LP: #1570812)

  [ Marco Trevisan (Treviño) ]
  * BamfApplication: correctly set a main child when handling windows

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 15 Apr 2016 11:57:31 +0000

bamf (0.5.3~bzr0+16.04.20160331-0ubuntu1) xenial; urgency=medium

  [ Marco Trevisan (Treviño), Rico Tzschichholz ]
  * BamfApplication: bind window-{added,removed} signals to child-
    {added,removed} ones

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Thu, 31 Mar 2016 22:53:39 +0000

bamf (0.5.3~bzr0+16.04.20160322.1-0ubuntu1) xenial; urgency=medium

  [ Marco Trevisan (Treviño) ]
  * BamfMatcher: avoid to register apps with invalid (empty or not
    existing) destkop files (LP: #1560490)

  [ Rico Tzschichholz ]
  * BamfView: Fix ABI break caused by r625 (LP: #1560486)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 22 Mar 2016 15:35:03 +0000

bamf (0.5.3~bzr0+16.04.20160321-0ubuntu1) xenial; urgency=medium

  [ CI Train Bot ]
  * debian/libbamf3-2.symbols: update to released version.
  * No-change rebuild.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Mon, 21 Mar 2016 15:35:41 +0000

bamf (0.5.3~bzr0+16.04.20160229-0ubuntu1) xenial; urgency=medium

  * Use startup notifications to set a "starting" property (LP: #676457)

 -- Andrea <andrea.azzarone@canonical.com>  Mon, 29 Feb 2016 16:02:03 +0100
