@@ -76,6 +76,7 @@ void          bamf_matcher_register_desktop_file_for_pid (BamfMatcher * self,
 
 void          bamf_matcher_set_starting_desktop_file     (BamfMatcher * self,
                                                           const char *desktop_file,
+                                                          SnStartupSequence *sequence,
                                                           gboolean starting);
 
 const char  * bamf_matcher_get_desktop_file_class        (BamfMatcher * self,
